--- a/src/components/homePage/collection/clothItem/clothItem.module.css
+++ b/src/components/homePage/collection/clothItem/clothItem.module.css
@@ -23,13 +23,22 @@
     height: 18vw;
 }
 
-.LightIndicator {
+.BlueIndicator {
     background-color: #86B049;
     width: 0.7rem;
     height: 0.7rem;
     border-radius: 50%;
     margin-right: 0.3rem;
 }
+
+.RedIndicator {
+    background-color: rgba(255, 0, 0, 0.8);
+    width: 0.7rem;
+    height: 0.7rem;
+    border-radius: 50%;
+    margin-right: 0.3rem;
+}
+
 .StatusGroup {
     display: flex;
     align-items: center;
